--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.2",
     "@types/pg": "^8.11.14",
     "demon": "^0.0.1",
